--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@sprintwerk/node-weatherkit",
   "version": "1.0.0-beta.2",
   "description": "Apple WeatherKit client for NodeJS",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/src/index.js",
+  "types": "./dist/src/index.d.ts",
   "files": [
     "dist",
     "README.md"
